# tasuki

./: .env  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  compose.yaml  rust-toolchain.toml  sqlc.json
.devcontainer/: devcontainer.json
.github/workflows/: pull_request.yaml
crates/tasuki-core/: Cargo.toml
crates/tasuki-core/src/: backend.rs  lib.rs  tokio_spawner.rs  utils.rs  worker.rs
crates/tasuki-sqlx/: Cargo.toml  sqlc.json
crates/tasuki-sqlx/migrations/: 20250812105609_init.sql
crates/tasuki-sqlx/queries/: queue.sql
crates/tasuki-sqlx/src/: backend.rs  client.rs  lib.rs  queries.rs
examples/: Cargo.toml  list_jobs.rs  simple.rs  with_listener.rs
migrations/: 20250812105609_init.sql
queries/: queue.sql
src/: client.rs  lib.rs  queries.rs  worker.rs
tasuki-core/src/: backend.rs  lib.rs  worker.rs
tasuki-sqlx/: Cargo.toml
tasuki-sqlx/examples/: list_jobs.rs  simple.rs  with_listener.rs
tasuki-sqlx/queries/: queue.sql
tasuki-sqlx/src/: backend.rs  client.rs  lib.rs  queries.rs
