[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0 OR MIT"

[package]
name = "tasuki"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["postgres"]
postgres = ["tasuki-sqlx"]

[dependencies]
tasuki-core = { workspace = true }
tasuki-sqlx = { workspace = true, optional = true }

[workspace.dependencies]
futures = "0.3"
pin-project-lite = "0.2"
tracing = "0.1"

tasuki-core = { path = "./crates/tasuki-core" }
tasuki-sqlx = { path = "./crates/tasuki-sqlx" }


[dev-dependencies]
futures = { workspace = true }
pin-project-lite = { workspace = true }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
serde = "1.0"
tracing = { workspace = true }
tracing-subscriber = "0.3"

tokio = { version = "1.47.1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"