[workspace]
resolver = "3"
members = ["tasuki-core", "tasuki-sqlx"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
futures = "0.3"
pin-project-lite = "0.2"
tracing = "0.1"

tasuki-core = { path = "./tasuki-core" }
tasuki-sqlx = { path = "./tasuki-sqlx" }
