[package]
name = "examples"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
tasuki-core = { workspace = true }
tasuki-sqlx = { workspace = true }

futures = { workspace = true }
pin-project-lite = { workspace = true }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
serde = "1.0"

tracing = { workspace = true }
tracing-subscriber = "0.3"

tokio = { version = "1.47.1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"

[[example]]
name = "simple"
path = "simple.rs"

[[example]]
name = "with_listener"
path = "with_listener.rs"
