[package]
name = "tasuki-sqlx"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
resolver = "3"

[dependencies]
tasuki-core = { workspace = true }

futures = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
serde = "1.0"
serde_json = "1.0"
